# VMath

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  aux.codex  functions_goals.txt  ricer.sh  runner.sh
bench_results/: grapher.py
docs/html/: Constants_8h.html  Constants_8h.js  Constants_8h__dep__incl.dot  Constants_8h__dep__incl.map  Constants_8h__dep__incl.md5  Constants_8h_source.html  NDSFunctions_8hpp.html  NDSFunctions_8hpp.js  NDSFunctions_8hpp__dep__incl.dot  NDSFunctions_8hpp__dep__incl.map  NDSFunctions_8hpp__dep__incl.md5  NDSFunctions_8hpp__incl.map  NDSFunctions_8hpp__incl.md5  NDSFunctions_8hpp_source.html  VMath2D_8hpp.html  VMath2D_8hpp.js  VMath2D_8hpp__dep__incl.dot  VMath2D_8hpp__incl.map  VMath2D_8hpp__incl.md5  VMath2D_8hpp_source.html  VMath3D_09_8hpp.html  VMath3D_09_8hpp.js  VMath3D_09_8hpp__dep__incl.map  VMath3D_09_8hpp__dep__incl.md5  VMath3D_09_8hpp__incl.dot  VMath3D_09_8hpp__incl.map  VMath3D_09_8hpp__incl.md5  VMath3D_09_8hpp_source.html  VMath3D_8hpp.html  VMath3D_8hpp.js  VMath3D_8hpp__dep__incl.map  VMath3D_8hpp__dep__incl.md5  VMath3D_8hpp__incl.map  VMath3D_8hpp__incl.md5  VMath3D_8hpp_source.html  VMathN_8hpp.html  VMathN_8hpp.js  VMathN_8hpp__incl.map  VMathN_8hpp__incl.md5  VMathN_8hpp_source.html  (+77 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+13 more)
docs/latex/: Constants_8h.tex  Constants_8h__dep__incl.dot  Constants_8h__dep__incl.md5  Constants_8h_source.tex  NDSFunctions_8hpp.tex  NDSFunctions_8hpp__dep__incl.dot  NDSFunctions_8hpp__dep__incl.md5  NDSFunctions_8hpp__incl.md5  NDSFunctions_8hpp_source.tex  VMath2D_8hpp.tex  VMath2D_8hpp.tex.tmp  VMath2D_8hpp__dep__incl.dot  VMath2D_8hpp__incl.md5  VMath2D_8hpp_source.tex  VMath3D_09_8hpp.tex  VMath3D_09_8hpp__dep__incl.md5  VMath3D_09_8hpp__incl.dot  VMath3D_09_8hpp__incl.md5  VMath3D_09_8hpp_source.tex  VMath3D_8hpp.tex  VMath3D_8hpp__dep__incl.md5  VMath3D_8hpp__incl.md5  VMath3D_8hpp_source.tex  VMathN_8hpp.tex  VMathN_8hpp__incl.md5  VMathN_8hpp_source.tex  annotated.tex  dir_3277549bdbcf9923d5afdeba530147a7.tex  dir_3277549bdbcf9923d5afdeba530147a7_dep.md5  dir_ab139745362c0983d2f92b59d5a06574.tex.tmp  dir_b2abf504d45f6e66b6e040b615127819.tex  dir_b2abf504d45f6e66b6e040b615127819_dep.md5  dir_b4e98ea9ada4e66ab1abd81e069e1722.tex  dir_b4e98ea9ada4e66ab1abd81e069e1722_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  dirs.tex  files.tex  io__manager_8hpp.tex  io__manager_8hpp_source.tex  namespaceNDSF.tex  (+24 more)
docs/xml/: Constants_8h.xml  Doxyfile.xml  NDSFunctions_8hpp.xml  VMath2D_8hpp.xml  VMath3D_09_8hpp.xml  VMath3D_8hpp.xml  VMathN_8hpp.xml  dir_3277549bdbcf9923d5afdeba530147a7.xml  dir_ab139745362c0983d2f92b59d5a06574.xml  dir_b2abf504d45f6e66b6e040b615127819.xml  dir_b4e98ea9ada4e66ab1abd81e069e1722.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  io__manager_8hpp.xml  namespaceNDSF.xml  namespaceconstants.xml  namespacedim2.xml  namespacedim3.xml  namespacedim4.xml  namespacedimN.xml  namespaceprofiler.xml  namespacevisualizer.xml  profiler_8hpp.xml  renderer_8hpp.xml  structdim2_1_1Vec2.xml  structdim3_1_1Mat3.xml  structdim3_1_1Vec3.xml  structdim4_1_1Mat4.xml  structdim4_1_1Vec4.xml  threading__manager_8hpp.xml  visualizer_8hpp.xml
src/: Basic_Vector_Operations.cpp  Constants.h  NDSFunctions.hpp  VMath2D.h  VMath2D.hpp  VMath3D+.hpp  VMath3D.h  VMath3D.hpp  VMathM1.cpp  VMathM1.h  VMathN.h  VMathN.hpp  codex.txt  main.cpp
(+11 files in other folders)
